--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,11 @@ BugReports: https://github.com/rossellhayes/arhfn/issues
 Depends: 
     fauxnaif (>= 0.5.4)
 Imports: 
+    beepr (>= 1.3),
+    drake (>= 7.9.0),
+    here (>= 0.1),
     magrittr (>= 1.5),
+    rstudioapi (>= 0.10),
     usethis (>= 1.5.1)
 Remotes: 
     rossellhayes/fauxnaif
