--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
     here (>= 0.1),
     magrittr (>= 1.5),
     rstudioapi (>= 0.10),
+    tibble (>= 2.1.3),
     usethis (>= 1.5.1)
 Remotes: 
     rossellhayes/fauxnaif
