--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(ld)
 export(mk)
 export(mk_fg)
 export(read_rda)
-export(recode_join)
 export(src)
 export(use_arh_drake)
-importFrom(magrittr,"%>%")
+export(use_example)
+importFrom(rlang,"%||%")
