--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(read_rda)
 export(src)
 export(use_arh_drake)
 export(use_example)
+export(use_fn)
 export(use_mit_badge)
 importFrom(rlang,"%||%")
