--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,6 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 URL: https://github.com/rossellhayes/arhfn
 BugReports: https://github.com/rossellhayes/arhfn/issues
-Depends: 
-    fauxnaif (>= 0.5.4)
 Imports: 
     beepr (>= 1.3),
     dplyr (>= 0.8.3),
@@ -22,9 +20,8 @@ Imports:
     magrittr (>= 1.5),
     rstudioapi (>= 0.10),
     tibble (>= 2.1.3),
-    usethis (>= 1.5.1)
-Remotes: 
-    rossellhayes/fauxnaif
+    usethis (>= 1.5.1),
+    readr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
