--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,16 +12,17 @@ License: MIT + file LICENSE
 URL: https://github.com/rossellhayes/arhfn
 BugReports: https://github.com/rossellhayes/arhfn/issues
 Imports: 
-    beepr (>= 1.3),
-    dplyr (>= 0.8.3),
-    drake (>= 7.9.0),
-    haven (>= 2.2.0),
-    here (>= 0.1),
-    magrittr (>= 1.5),
-    rstudioapi (>= 0.10),
-    tibble (>= 2.1.3),
-    usethis (>= 1.5.1),
-    readr
+    beepr,
+    dplyr,
+    drake,
+    haven,
+    here,
+    magrittr,
+    readr,
+    rlang,
+    rstudioapi,
+    tibble,
+    usethis
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
