--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(mk_fg)
 export(read_rda)
 export(src)
 export(use_arh_drake)
+export(use_dependency)
 export(use_example)
 export(use_fn)
 export(use_mit_badge)
