--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,12 @@
 
 export(drake_unlock)
 export(ghosts)
+export(invaders)
 export(lbl_to_chr)
 export(ld)
 export(mk)
 export(mk_fg)
+export(random_art)
 export(read_rda)
 export(src)
 export(use_arh_drake)
