--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,5 @@ export(use_dependency)
 export(use_example)
 export(use_fn)
 export(use_mit_badge)
+export(use_readme_logo)
 importFrom(rlang,"%||%")
