--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(read_rda)
 export(src)
 export(use_arh_drake)
 export(use_dependency)
+export(use_description)
 export(use_example)
 export(use_fn)
 export(use_mit_badge)
