--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ export(use_description)
 export(use_example)
 export(use_fn)
 export(use_mit_badge)
+export(use_package)
 export(use_readme_logo)
 importFrom(rlang,"%||%")
