--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,13 @@ export(random_art)
 export(read_rda)
 export(src)
 export(use_arh_drake)
-export(use_dependency)
+export(use_depends)
 export(use_description)
 export(use_example)
 export(use_fn)
 export(use_mit_badge)
 export(use_package)
 export(use_readme_logo)
+export(use_suggests)
 export(use_test)
 importFrom(rlang,"%||%")
