--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ URL: https://github.com/rossellhayes/arhfn
 BugReports: https://github.com/rossellhayes/arhfn/issues
 Imports: 
     beepr,
+    cli,
     crayon,
     dplyr,
     drake,
@@ -21,11 +22,13 @@ Imports:
     here,
     magrittr,
     readr,
+    renv,
     rlang,
     rstudioapi,
     stringi,
     stringr,
     tibble,
+    tidyselect,
     tools,
     usethis
 Encoding: UTF-8
