--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,8 @@ export(edit_shrtcts)
 export(ghosts)
 export(invaders)
 export(lbl_to_chr)
-export(ld)
-export(mk)
-export(mk_fg)
+export(load_all)
+export(make)
 export(random_art)
 export(read_rda)
 export(src)
