--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(random_art)
 export(read_rda)
 export(src)
 export(use_arh_drake)
+export(use_calendar_version)
+export(use_calver)
 export(use_depends)
 export(use_description)
 export(use_example)
