feat: add `use_theme_a11y()`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,13 @@ Imports:
     rappdirs,
     readr,
     rlang,
+    rsthemes,
     rstudioapi,
     stringr,
     usethis,
     withr
+Remotes: 
+    gadenbuie/rsthemes
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
