feat: add `use_r()`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,10 +22,11 @@ Imports:
     rsthemes,
     rstudioapi,
     stringr,
-    usethis,
+    usethis (>= 2.1.6.9000),
     withr
-Remotes: 
-    gadenbuie/rsthemes
+Remotes:  
+    gadenbuie/rsthemes,
+    r-lib/usethis
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
