--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(use_description)
 export(use_example)
 export(use_fn)
 export(use_package)
+export(use_r)
 export(use_suggests)
 export(use_test)
 export(use_theme_a11y)
